# shallow-review

./: .gitignore  AGENTS.md  README.md  pipeline.py  pyproject.toml
collect-classify/: draft_parser.py  draft_template.md  process_draft.py
collect-classify/prompts/: draft.yaml
collect-classify/shallow_review/: cli.py  draft_parser.py  draft_processing.py  draft_types.py
collect-classify/templates/: document-lists.md.jinja  document.md.jinja
data/: data.db  taxonomy-2.yaml  taxonomy-3.yaml  taxonomy-foobar.yaml  taxonomy-update-source_WIP-doc.md  taxonomy.yaml
data/link_sources/: arxiv-2025-papers-from-top-researchers-in-SR2024-filtered.txt  arxiv-2025-papers-from-top-researchers-in-SR2024.txt  arxiv_papers_even_more_gavin_authors-filtered.txt  arxiv_papers_even_more_gavin_authors.txt  arxiv_papers_gavin_authors-filtered.txt  arxiv_papers_gavin_authors.txt
data/outputs/: SR2025-generated-added-papers-2025-11-07.md
data/various_sources/: even-more-names-from-gavin.txt  more-names-from-gavin.txt
docs/: CLASSIFY.md  CLASSIFY_SCHEMA.md  CODE.md  COLLECT.md  COLLECT_DESIGN.md  COLLECT_SCHEMA.md  COLLECT_SCHEMA_V2.md  DATA.md  DESIGN_SUMMARY.md  DEVLOG.md  FIXES_COMPLETED.md  IMPLEMENTATION_STATUS.md  QUESTIONS_ANSWERED.md  SCRAPE.md
misc_scripts/: fetch_arxiv_papers.py  filter_papers_by_authors.py
prompts/: classify.yaml  collect.yaml
shallow_review/: add_items.py  classify.py  cli.py  collect.py  common.py  data_db.py  feedback.py  llm.py  scrape.py  stats.py  taxonomy.py  utils.py
web-2025-cu/shallow-review-2025/: index.html  package-lock.json  (+1 more)
(+38 files in other folders)
